# hr-demo

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  Start-HRDemo.ps1  app.py  app_factory.py  bun.lockb  commands.py  docker-compose.yml  hr-data.sqlite3  hr-demo.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml  sqlite.sql  vite.config.js  vite.config.ts
api/: app.py  commands.py  pyproject.toml
api/commands/: __init__.py  init_dev_data.py  update_employee_schemas.py  upgrade_db.py
api/configs/: __init__.py
api/configs/deploy/: __init__.py
api/configs/feature/: compress_config.py  log_config.py
api/extensions/: ext_compress.py  ext_database.py  ext_logging.py  ext_login.py  ext_migrate.py
api/fixture/: table.sql
api/libs/: helper.py
api/libs/models/: __init__.py  account.py  account_company.py  base.py  candidate.py  company.py  department.py  employee.py  employee_position.py  json_schema.py  json_value.py  position.py
api/libs/schema/: http.py  page.py  resource.py
api/migrations/versions/: 02c3db227d01_init_tables.py  af6203bb8220_add_entity_type_to_json_schemas.py  cb611faeb004_init_tables.py
api/routes/: __init__.py  auth.py  candidate.py  companies.py  company.py  customfield.py  dashboard.py  department.py  employee.py  health.py  position.py
api/routes/customfield/: __init__.py  advanced.py  schema.py  value.py
api/services/: account_manager.py  company_manager.py  position_manager.py
api/services/account/: __init__.py  _error.py  _schema.py  _shcema.py  manager.py
api/services/candidate/: __init__.py  _schema.py  manager.py
api/services/company/: __init__.py  _schema.py  manager.py
api/services/customfield/: __init__.py  _schema.py  manager.py  validator.py
api/services/dashboard/: __init__.py  _schema.py  aggregation_manager.py  base_manager.py  employee_manager.py  manager.py  organization_manager.py  recruitment_manager.py
api/services/department/: __init__.py  _schema.py  manager.py
api/services/employee/: __init__.py  _schema.py  manager.py
api/services/permission/: __init__.py  error.py  manager.py
api/services/position/: __init__.py  _schema.py  manager.py
api/tests/: conftest.py  test_auth.py  test_companies.py  test_health.py
api/tests/fixtures/: __init__.py  account_data.py
api/tests/services/: test_account_service.py
apis/: __init__.py  auth.py  companies.py  health.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env.sample  .gitignore  app.py  pyproject.toml
backend/alembic/: env.py
backend/api/: main.py  response.py
backend/api/dependencies/: auth.py  session.py
backend/api/routes/: __init__.py  account.py  health.py
backend/apis/: __init__.py  auth.py  companies.py  health.py
backend/configs/: __init__.py
backend/core/controller/: __init__.py  _base.py  account.py
backend/core/controller/account/: __init__.py  administrator.py  schema.py
backend/core/controller/company/: __init__.py  company.py  hr.py  schema.py
backend/core/database/: __init__.py  _base_model.py  _session.py  account.py  account_company_rel.py  account_department_rel.py  account_interview_record.py  administrator.py  company.py  company_job.py  department.py
backend/core/utils/: __init__.py  helper.py  schema_extention.py  settings.py
backend/data/: db.sqlite3
backend/extensions/: ext_logging.py  ext_migrate.py
backend/fixture/: table.sql
backend/managers/: account_manager.py  company_manager.py  department_manager.py
backend/migrations/versions/: 8258b38bdadf_initial_migration.py
backend/models/: account.py  company.py  schema.py
backend/schema/: user.py
backend/schema/common/: http.py  page.py
backend/tests/: conftest.py  test_account.py  test_auth.py  test_base_company.py  test_health.py
components/: card-section.tsx  icons.tsx
config/: default.toml
configs/: _database.py  create_config.py
crates/examples/: Cargo.toml  migrate.rs
crates/lib/lib-api/: Cargo.toml
crates/lib/lib-api/examples/: run_api.rs
crates/lib/lib-api/src/: config.rs  docs.rs  error.rs  lib.rs  response.rs  routes.rs  server.rs
crates/lib/lib-api/src/handlers/: candidate.rs  company.rs  dashboard.rs  department.rs  employee.rs  health.rs  mod.rs  position.rs  users.rs
crates/lib/lib-api/src/middlewares/: logger.rs  mod.rs
crates/lib/lib-core/: Cargo.toml
crates/lib/lib-core/src/: db.rs  lib.rs
crates/lib/lib-core/src/services/: candidate.rs  company.rs  dashboard.rs  department.rs  employee.rs  mod.rs  position.rs  user.rs
crates/lib/lib-core/tests/: lib.rs
crates/lib/lib-core/tests/common/: mod.rs
crates/lib/lib-core/tests/services/: candidate_test.rs  mod.rs
crates/lib/lib-schema/: Cargo.toml
crates/lib/lib-schema/src/: lib.rs
crates/lib/lib-schema/src/common/: page.rs
crates/lib/lib-schema/src/models/: candidate.rs  common.rs  company.rs  dashboard.rs  department.rs  employee.rs  employee_position.rs  json_schema.rs  json_value.rs  mod.rs  position.rs  user.rs
data/: hr-data.sqlite3
desktop/: BUILD_GUIDE.md  README.md  USAGE.md  build.bat  build.ps1  build.sh  config.py  debug_exe.py  debug_paths.py  main.py  requirements.txt  test_config.py  test_dev.py  test_final.py  test_server.py  test_spec.py
docs/: 001-后端服务指南.md  模板.md
document/: desktop-application-guide.md  document-guide.md  progress.md  status-report.md  structure.md
extensions/: ext_database.py  ext_login.py  ext_migrate.py
frontend/: bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
hooks/: use-store.ts
instance/: db.sqlite3
lib/: api.ts  cache.ts  constant.ts  helper.ts  routes.ts
managers/: account_manager.py  company_manager.py  employee_manager.py  position_manager.py
models/: __init__.py  account.py  base.py  company.py  department.py  employee.py  models.py  position.py
schema/: company.py  user.py
scripts/: test_data.ts
services/: company.ts  db.ts  department.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_docs.rs  lib.rs  main.rs  migrations.rs
(+259 files in other folders)
