[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]

resolver = "2"
members = ["crates/lib/lib-api", "crates/lib/lib-core", "crates/lib/lib-schema", "crates/lib/lib-utils", "src-tauri"]


[profile.release]
# 开启所有优化，包括链接时间优sql化（LTO）
lto = true
# 开启更多的优化，但可能会增加编译时间
codegen-units = 1
# 开启所有可能的优化
opt-level = 3
# 开启 panic 时的堆栈展开，这会增加二进制文件的大小，但可以在 panic 时提供更多的信息
# 如果你不需要这些信息，可以设置为 'abort' 来减小二进制文件的大小
panic = 'unwind'


[workspace.dependencies]
chrono = { version = "0.4" }
serde = { version = "^1" }
serde_json = { version = "^1" }
tokio = { version = "1" }
futures = { version = "0.3.30" }
thiserror = { version = "2" }
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }


uuid = { version = "^1" }
md5 = { version = "0.7" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }

