[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "uvicorn[standard]>=0.30.5",
    "fastapi>=0.112.0",
    "click>=8.1.7",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.32",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[python-jose]>=3.3.0",
    "pydantic-settings>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
