[package]
name = "hr-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hr_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }                     # 添加 tokio 依赖
lib-api = { path = "../crates/lib/lib-api" }     # 添加 lib-api 依赖
lib-utils = { path = "../crates/lib/lib-utils" } # lib-api 可能需要 lib-utils

tracing = { workspace = true }
