[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

lib-schema = { version = "0.1.0", path = "../lib-schema" }
lib-entity = { version = "0.1.0", path = "../lib-entity" }

[dev-dependencies]
migration = { path = "../../migration" }
tokio = { version = "1", features = ["full", "test-util", "macros"] }
pretty_assertions = "1.4"