[package]
name = "lib-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
# 复用工作区依赖
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"] }

# 数据库相关
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }

[lints]
workspace = true