[package]
name = "lib-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
# 复用工作区依赖
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"] }

# 数据库相关
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }

# 添加 sea-orm
sea-orm = { workspace = true, features = ["macros", "with-chrono", "with-uuid"] }

# 添加 lib-entity
lib-entity = { path = "../lib-entity" }

[lints]
workspace = true